css changes in docs to surya and sai

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,7 @@
      background: none;
      box-shadow: none;
    }
-.collapse list-unstyled collapse-2 li ul{
-   margin-left: 20px;
-}
+
    td:first-child{
     border-left:1px solid #e5e5e5;
   }
@@ -230,6 +228,9 @@
   .customScroll #mCSB_1_scrollbar_vertical .mCSB_dragger{height:84px!important}
   .documentTabCLick .mCSB_inside>.mCSB_container {
       margin-right: 5px;
+  }
+  #Installation ul{
+    display:none;
   }
   .doc-data strong.blue{color: #008be2;}
   .doc-data .orange{color: #ffc015}
