ul css changes in surya to sai

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -229,9 +229,10 @@
   .documentTabCLick .mCSB_inside>.mCSB_container {
       margin-right: 5px;
   }
-  #Installation ul{
-    display:none;
-  }
+#Installation ul{position: absolute;}
+    #Installation ul{display:none;}
+
+    
   .doc-data strong.blue{color: #008be2;}
   .doc-data .orange{color: #ffc015}
   .darkBlue{color: #008be2}
