--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -842,7 +842,7 @@
                             </div>
 
                          <div id="Techforce"  class="page-section">
-                             <h3><span class="numbers">3.</span>Techforce.ai Studio Guide</h3>
+                             <h3>Techforce.ai Studio Guide</h3>
                           </div>
 
                           <div id="Installation"  class="page-section">
@@ -2462,7 +2462,7 @@
                         </div>
 
                           <div id="Worker"  class="page-section">
-                            <h3><span class="numbers">5.</span> EWorker Machine</h3>
+                            <h3><span class="numbers">5.</span> eWorker Machine</h3>
                           </div>
 
                            <div id="RuntimeInstallation"  class="page-section">
