css changes in docs and surya

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -547,18 +547,18 @@
                         </div> -->
                         <ul class="nav nav-pills flex-column side customScroll">
                                   <li class="subMenu">
-                                      <a href="About" class="heading"><span class="numbers">1.</span>About Techforce.ai RPA</a>
+                                      <a href="About" class="heading"><span class="numbers"></span>About Techforce.ai RPA</a>
 
                                   </li>
                                   <li class="subMenu">
-                                      <a href="#ReleaseNotes" class="heading"><span class="numbers">2.</span> Release Notes</a>
+                                      <a href="#ReleaseNotes" class="heading"><span class="numbers"></span> Release Notes</a>
                                       <ul class="collapse list-unstyled collapse-1">
                                           <li><a class="child 1" href="#Patches"> Patches & Updates</a></li>
                                           <li><a class="child 1" href="#What"> What's New</a></li>
                                       </ul>
                                   </li>
                                  <li class="subMenu">
-                                      <a href="#Techforce"  class="heading"><span class="numbers">3.</span>Techforce.ai Studio Guide</a>
+                                      <a href="#Techforce"  class="heading"><span class="numbers"></span>Techforce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
                                           <li id="Installation"><a class="child 2" href="#Installation">Installation</a>
                                               <ul>
@@ -750,7 +750,7 @@
                                             </li>
                                     </ul></li>
                                   <li>
-                                      <a href="#EnterpriseManagerconsole " class="heading"><span class="numbers">4.</span> Enterprise Manager console </a>
+                                      <a href="#EnterpriseManagerconsole " class="heading"><span class="numbers"></span> Enterprise Manager console </a>
                                        <ul class="collapse list-unstyled collapse-3">
                                           <li><a class="child 3" href="#Registerwith"><span class="numbers"></span> Register with eManager console</a></li>
                                           <li><a class="child 3" href="#Login"><span class="numbers"></span>Login</a></li>
@@ -765,7 +765,7 @@
                                       </ul>
                                   </li>
                                   <li>
-                                      <a href="#Worker" class="heading"><span class="numbers">5.</span>eWorker Machine</a>
+                                      <a href="#Worker" class="heading"><span class="numbers"></span>eWorker Machine</a>
                                       <ul class="collapse list-unstyled collapse-4">
                                           <li><a class="child  4" href="#RunTimeInstallation">RunTime Installation Steps</a>
                                                <ul>
@@ -783,11 +783,11 @@
                                   </li>
 
                                 <li>
-                                    <a href="#BestPractices" class="heading"><span class="numbers">6.</span> Best Practices & Guidelines </a>
+                                    <a href="#BestPractices" class="heading"><span class="numbers"></span> Best Practices & Guidelines </a>
                                 </li>
 
                                    <li>
-                                      <a href="Architecture" class="heading"><span class="numbers">7.</span> Architecture & Deployment Models </a>
+                                      <a href="Architecture" class="heading"><span class="numbers"></span> Architecture & Deployment Models </a>
                                       <ul class="collapse list-unstyled collapse-5">
                                          <li><a class="child 5" href="#SaaSModel">SaaS Model</a></li>
                                          <li><a class="child 5" href="#HybridModel">Hybrid Model</a></li>
