--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -547,7 +547,7 @@
                         </div> -->
                         <ul class="nav nav-pills flex-column side customScroll">
                                   <li class="subMenu">
-                                      <a href="About" class="heading"><span class="numbers"></span>About Techforce.ai RPA</a>
+                                      <a href="About" class="heading"><span class="numbers"></span>About Techforce.ai</a>
 
                                   </li>
                                   <li class="subMenu">
