--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -547,7 +547,7 @@
                         </div> -->
                         <ul class="nav nav-pills flex-column side customScroll">
                                   <li class="subMenu">
-                                      <a href="About" class="heading"><span class="numbers"></span>About Techforce.ai</a>
+                                      <a href="AboutTechforce.ai" class="heading"><span class="numbers"></span>About Techforce.ai</a>
 
                                   </li>
                                   <li class="subMenu">
@@ -801,7 +801,7 @@
                     </div>
 
                       <div class="doc-data col-md-8 col-sm-8">
-                        <div id="About"  class="page-section">
+                        <div id="AboutTechforce.ai"  class="page-section">
                                 <h3> About Techforce.ai</h3>
                                 <p>Techforce.ai is the industry’s first eWorkforce company that helps companies deploy their own human-like digital employees to perform work, leveraging intelligent automation technologies.</p>
                                 <p>Intelligent Automation Software includes five major technologies:</p>
