css and cdm docs chanes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -230,9 +230,25 @@
       margin-right: 5px;
   }
 #Installation ul{}
-    #Installation ul{display:none;}
+#Installation ul{display:none;}
 #MenuOptions ul{display: none;}
-
+#ActionLibrary ul{display: none;}
+#DesktopAutomation ul{display: none;}
+#WebAutomation ul{display: none;}
+#GeneralActions ul{display: none;}
+#Module ul{display: none;}
+#MouseActions ul{display: none;}
+#ConditionalActions ul{display: none;}
+#ExceptionHandling ul{display: none;}
+#ExcelActions ul{display: none;}
+#FilesandFolders ul{display: none;}
+#SecureFTP ul{display: none;}
+#CSVActions ul{display: none;}
+#Programming ul{display: none;}
+#Variables ul{display: none;}
+#Technologies ul{display: none;}
+#MailIntegration ul{display: none;}
+#DatabaseActions ul{display: none;}
   .doc-data strong.blue{color: #008be2;}
   .doc-data .orange{color: #ffc015}
   .darkBlue{color: #008be2}
@@ -678,7 +694,7 @@
                                                    <li style="margin-left:10px;"><a class="child 2" href="#Loops"><span class="numbers"></span> <span style="margin-left:25px;">Loops (For)</span></a></li>
                                                    <li style="margin-left:10px;"><a class="child 2" href="#TechforceOCR"><span class="numbers"></span> <span style="margin-left:25px;">Techforce OCR</span></a></li>
 
-                                                    <li id="Files&Folders" style="margin-left:10px;"><a class="child 2" href="#Files"><span class="numbers"></span> <span style="margin-left:25px;">Files & Folders</span></a>
+                                                    <li id="FilesandFolders" style="margin-left:10px;"><a class="child 2" href="#Files"><span class="numbers"></span> <span style="margin-left:25px;">Files & Folders</span></a>
                                                     <ul>
                                                     <li style="margin-left:20px;"><a class="child 2" href="#CreateFiles"><span class="numbers"></span> <span style="margin-left:35px;">Cteate File/Folder</span></a></li>
                                                     <li style="margin-left:20px;"><a class="child 2" href="#WriteToFile"><span class="numbers"></span> <span style="margin-left:35px;">Write to File</span></a></li>
