--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2907,7 +2907,7 @@ $('#ActionLibrary').click(function(){
 });
 
 $('#DesktopAutomation').click(function(){
- $(this).children('ul').stop().slideToggle(700);
+ $(this).children('ul').stop();
 });
 
 $('#WebAutomation').click(function(){
@@ -2967,7 +2967,7 @@ $('#MailIntegration').click(function(){
 });
 
 $('#DatabaseActions').click(function(){
- $(this).children('ul').stop().slideToggle(700);
+ $(this).children('ul').stop().slideToggle(fast);
 });
     </script>
 </body>
