--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -229,7 +229,7 @@
   .documentTabCLick .mCSB_inside>.mCSB_container {
       margin-right: 5px;
   }
-#Installation ul{}
+/* #Installation ul{} */
 #Installation ul{display:none;}
 #MenuOptions ul{display: none;}
 /* #ActionLibrary ul{display: none;} */
@@ -586,7 +586,7 @@
                                             <li id="ActionLibrary"><a class="child 2" href="#Action"><span class="numbers"></span> Action Library</a>
                                               <ul>
                                                 <li style="margin-left:10px;"><a class="child 2" href="#Stage"><span class="numbers"></span> <span style="margin-left:5px;">Stage</span></a></li>
-                                                        <li id="DesktopAutomation" style="margin-left:10px;"><a class="child 2" href="#DesktopAutomation"><span class="numbers"></span> <span style="margin-left:5px;">Desktop Automation</span></a>
+                                                        <li  style="margin-left:10px;"><a class="child 2" href="#DesktopAutomation"><span class="numbers"></span> <span style="margin-left:5px;">Desktop Automation</span></a>
                                                         <ul>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#Keyboard"><span class="numbers"></span> <span style="margin-left:15px;">Keyboard Shortcuts</span></a></li>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#Drag"><span class="numbers"></span> <span style="margin-left:15px;">Drag and Drop</span></a></li>
