css changes in doc and surya

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -815,6 +815,20 @@
                                 <h5>Techforce.ai RPA Studio</h5>
                                 <p>Techforce RPA Studio is a complete solution for application integration, and automation of third-party applications, administrative IT tasks, and business IT processes.</p>
                                 <p>Techforce.ai RPA Studio contains multiple panels for easier access to specific functionalities. The UI of Techforce RPA Studio contains user-friendly functionalities, that can help automate any business process to reduce the manual workforce and rapidly build AI-powered digital employees across the Business & IT workflows.</p>
+                                <img src="{{ '/assets/images/doc-img108.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                                <p style="text-align:center;"><strong>Figure :User Interface</strong></p>
+                                <h5>Menu Bars</h5>
+                                <p>Techforce RPA Studio Menu bar contains File Tab and Record Tab. The menu toolbar contains the following New, Open, Save, Record, Clear, Publish, Settings, Stop and Play functionalities. Menu bars are very common and easy to find. They help in the efficient use of space.</p>
+                                <h5>Action Library Panel</h5>
+                                <p>All the actions in the Action library panel are categorized based on the functionality. List of action in the Library panel are  Stage, Desktop Automation, Web Automation, General, Programming, Mail Integration, Database.</p>
+                                <h5>Developer Panel</h5>
+                                <p>Developer panel is used to develop the flow or script to automate any type of operations, either Desktop or Web-based, and using the Record button the developer can also create a flow of web automation.</p>
+                                <h5>Properties Panel</h5>
+                                <p>The properties panel is used to specify each Action’s and sub-actions property and helps to automate the bot 8successfully.</p>
+                                <h5>Variables Panel</h5>
+                                <p>The variables panel is used to specify the names to identify and store the data in different formats like data table, list, and string, etc., According to the usage, variables may be called into the properties panel to automate any script.</p>
+                                <h5>Logs Panel</h5>
+                                <p>Logs Panel is used to see the starting and ending of the automation and to find the flow logs and non-executable lines, which can easily get to know the Bugs.</p>
                           </div>
 
                           <div id="ReleaseNotes"  class="page-section">
