css changes in doc and surya toasa

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -551,6 +551,9 @@
 
                                   </li>
                                   <li class="subMenu">
+                                      <a href="#GetStarted" class="heading"><span class="numbers"></span>Get Started</a>
+                                  </li>
+                                  <li class="subMenu">
                                       <a href="#ReleaseNotes" class="heading"><span class="numbers"></span> Release Notes</a>
                                       <ul class="collapse list-unstyled collapse-1">
                                           <li><a class="child 1" href="#Patches"> Patches & Updates</a></li>
@@ -830,6 +833,24 @@
                                 <h5>Logs Panel</h5>
                                 <p>Logs Panel is used to see the starting and ending of the automation and to find the flow logs and non-executable lines, which can easily get to know the Bugs.</p>
                           </div>
+
+
+                          <div id="GetStarted"  class="page-section">
+                            <h3>Get Started</h3>
+                            <h5>Get Started with building flows:</h5>
+                            <p>Create and edit flows in the Techforce.ai studio. Use the following examples to become familiar with the features and learn to build flows.</p>
+                            <h5>Use Cases:</h5>
+                            <h5>Build a basic flow:</h5>
+                            <p>Build a basic flow to open the Amazon website, search for a product by entering some text into the search box, read the text from the searched product, store it into a variable and print the text to the logs panel.</p>
+                            <h5>Build a flow using desktop actions:</h5>
+                            <p>Build a flow to show desktop, open notepad, enter some text, save the notepad, close the notepad and switch back to the studio.</p>
+                            <h5>Build a flow using Web actions:</h5>
+                            <p>Build a flow to open a webpage, click on an element, scroll the page down, take the snapshot of a page, print the text of an HTML element in the logs, capture the column data from a web table into a variable and print it in logs, and go back to the previous page.</p>
+                            <h5>Build a flow using Excel actions:</h5>
+                            <p>Build a flow to filter data from an Excel sheet based on two different column values and save the data into a variable. Write the filtered data into a new sheet in the same workbook. Again, filter the data based on two different column values and save it into another variable. Append the data to the same new sheet. Then, get the complete data from the Excel sheet and write it into another Excel sheet. Delete a range of data from the newly created Excel sheet.</p>
+                            <h5>Build a flow using files and folders:</h5>
+                            <p>Build a flow to get today’s date and retrieve the Excel files downloaded with today’s date from a folder. Compare the file names with specified data, rename the file and copy it to the required folder. Then delete the downloaded files.</p>
+                            </div>
 
                           <div id="ReleaseNotes"  class="page-section">
                             <h3>Release Notes</h3>
