--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -915,7 +915,7 @@
                              <li><span class="numbers">4.</span><strong>Others: </strong>Microsoft .Net Framework 4.6(Windows 8.1 and Windows Server 2012 R2: 4.6.1).</li>
                              </ol>
                              <h5>Download TechForce.ai RPA Studio:</h5>
-                             <p>Click on the below URL to download the TechForce.ai RPA Studio.<a href="https://techforce.ai.ai/download.html">https://techforce.ai.ai/download.html</a></p>
+                             <p>Click on the below URL to download the TechForce.ai RPA Studio.<a href="https://techforce.ai/download.html">https://techforce.ai/download.html</a></p>
                            </div>
 
                            <div id="InstallationInstructions"  class="page-section">
