--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -497,7 +497,7 @@
           <div class="container">
               <div class="row no-flex">
                   <div class="col-sm-5 cols">
-                      <a href="index.html" class="logo"><img src="{{ '/assets/images/techforce.ai-logo.png' | relative_url }}" alt="techforce.air"></a>
+                      <a href="index.html" class="logo"><img src="{{ '/assets/images/techforce-logo.png' | relative_url }}" alt="techforce"></a>
                   </div>
                   <div class="col-sm-7 text-right cols">
                       <ul class="list-unstyled">
@@ -805,7 +805,7 @@
 
                       <div class="doc-data col-md-8 col-sm-8">
                         <div id="AboutTechForce"  class="page-section">
-                                <h2>About TechForce.ai </h2>
+                                <h3 style="text-transform:none;">About TechForce.ai </h2>
                                 <p>TechForce.ai is the industry’s first eWorkforce company that helps companies deploy their own human-like digital employees to perform work, leveraging intelligent automation technologies.</p>
                                 <p>Intelligent Automation Software includes five major technologies:</p>
                                 <li><strong>Robotic Process Automation </strong>for performing repetitive process tasks.</li>
@@ -2499,7 +2499,7 @@
                         </div>
 
                           <div id="Worker"  class="page-section">
-                            <h3><span class="numbers">5.</span> eWorker Machine</h3>
+                            <h3 style="text-transform:none"><span class="numbers">5.</span> eWorker Machine</h3>
                           </div>
 
                            <div id="RuntimeInstallation"  class="page-section">
