--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -572,7 +572,7 @@
                                                  <li style="margin-left:20px;"><a class="child 2" href="#Un-installInstructions"> Un-install Instructions</a></li>
                                               </ul>
                                           </li>
-                                          <li><a class="child 2" href="#Building"><span class="numbers"></span> Building a basic bot</a></li>
+                                          <li><a class="child 2" href="#Building"><span class="numbers"></span> Building a basic eWorker</a></li>
                                           <li id="MenuOptions"><a class="child 2" href="#Menu"><span class="numbers"></span> Menu Options</a>
                                               <ul>
                                                 <li style="margin-left:20px;"><a class="child 2" href="#New"><span class="numbers"></span> <span style="margin-left:5px;">New</span></a></li>
@@ -1022,7 +1022,7 @@
                          </div>
 
                          <div id="Building"  class="page-section">
-                             <h4 class="amethyst"> Building a basic bot</h4>
+                             <h4 class="amethyst"> Building a basic eWorker</h4>
                              <h5>Building a basic bot</h5>
                              <p><span class="numbers">Use case:  </span> Get the Price of iPhone from Amazon</p>
                              <h5>Launch the studio</h5>
