--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -930,7 +930,17 @@
                              <li><span class="numbers">4.</span><strong>Others: </strong>Microsoft .Net Framework 4.6(Windows 8.1 and Windows Server 2012 R2: 4.6.1).</li>
                              </ol>
                              <h5>Download TechForce.ai RPA Studio:</h5>
-                             <p>Click on the below URL to download the TechForce.ai RPA Studio.<a href="https://techforce.ai/download.html" download>https://techforce.ai/download.html</a></p>
+                             <p>1. To download the studio, the user must register with eManager Console.</p>
+                             <p>2. To get access to the eManager Console, go to<a href="https://emcaws.techforce.ai/try/signup?subscriptionId=0">https://emcaws.techforce.ai/try/signup?subscriptionId=0</a>and submit the details.</p>
+                             <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                             <p>3. Upon successful registration, you will be redirected to the login page.</p>
+                             <img src="{{ '/assets/images/doc-img113.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                              <p>4.	You will be prompted to verify your email on the first login.</p>
+                             <img src="{{ '/assets/images/doc-img114.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                              <p>5.	 Go to your registered email and click on the verification link to complete the email verification process.</p>
+                             <img src="{{ '/assets/images/doc-img115.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
+                             <p>6.	Once you login to the eManager console, you will find the Download Studio button at the top right corner. Click on the button to start downloading.</p>
+                             <img src="{{ '/assets/images/doc-img116.png' | relative_url }}" alt="image" style="width:600px;text-align:center;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                            </div>
 
                            <div id="InstallationInstructions"  class="page-section">
@@ -958,9 +968,8 @@
                              <img src="{{ '/assets/images/doc-img5.png' | relative_url }}" alt="image" style="width:600px;border:1px solid green;margin-left:15%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure: Installation Instruction-5</strong></p>
                              </ol>
-
-
                           </div>
+
                           <div id="InstallingTechForceOCR"  class="page-section">
                               <h4 class="purple"><span class="numbers"></span>  Installing TechForce.ai OCR</h4>
                             <p>TechForce.ai OCR needs 164MB of hard disk space for installation.</p>
@@ -1023,7 +1032,7 @@
 
                          <div id="Building"  class="page-section">
                              <h4 class="amethyst"> Building a basic eWorker</h4>
-                             <h5>Building a basic bot</h5>
+                             <h5>Building a basic eWorker</h5>
                              <p><span class="numbers">Use case:  </span> Get the Price of iPhone from Amazon</p>
                              <h5>Launch the studio</h5>
                              <li><span class="numbers">	<strong>Step1: </strong> </span>  Create a new flow by clicking on the New Icon. A new flow will be displayed.</li>
